--- a/netflix.html
+++ b/netflix.html
@@ -142,7 +142,6 @@
                                 <li><a href="">Redeem Gift Cards</a></li>
                                 <li><a href="">Privacy</a></li>
                                 <li><a href="">Speed Test</a></li>
-
                                 </ul>
                                 <ul class="list1">
                                     <li><a href="">Media Center</a></li>
@@ -150,15 +149,14 @@
                                     <li><a href="">Cookie Preferences</a></li>
                                     <li><a href="">Legal Notices</a></li>
                                     </ul>
-                       
                     </div>
-
                   </div>
                   <div class="end">
 <h2>
 Netflix India
 </h2> 
 <h2>
-  </h2>                    </div>
+  </h2>                    
+  </div>
   </body>
 </html>
